WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30371
Fix media controls rendering for Chromium Mac
https://bugs.webkit.org/show_bug.cgi?id=30371
Summary
Fix media controls rendering for Chromium Mac
Andrew Scherkus
Reported
2009-10-14 20:04:35 PDT
Boiled down to a GraphicsContextSkia vs. GraphicsContextCG difference with drawRect(). I wasn't drawing with a stroke so switching to fillRect() makes more sense anyway.
Attachments
Round 1
(1.29 KB, patch)
2009-10-14 20:06 PDT
,
Andrew Scherkus
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Scherkus
Comment 1
2009-10-14 20:06:35 PDT
Created
attachment 41201
[details]
Round 1
Eric Seidel (no email)
Comment 2
2009-10-15 11:59:00 PDT
It seems that whoever is the gardner needs to be warned about this patch. Sucks that CR test results are not stored @ webkit.org
Eric Seidel (no email)
Comment 3
2009-10-15 11:59:33 PDT
Comment on
attachment 41201
[details]
Round 1 I'm OK with this change. I don't think I should be the one to set cq+ though, since the gardner needs to know about this change before it happens.
Andrew Scherkus
Comment 4
2009-10-15 12:02:46 PDT
No fear!! Rebaseline is ready
http://codereview.chromium.org/276041/show
I'll ping the gardener
Eric Seidel (no email)
Comment 5
2009-10-15 12:49:57 PDT
I am cautious... I have been too oft (and too oft wrongly!) implicated in tree-breaking crimes involving WebKit! :)
Yong Li
Comment 6
2009-10-19 08:58:48 PDT
Comment on
attachment 41201
[details]
Round 1 Let commit bot land it
WebKit Commit Bot
Comment 7
2009-10-19 09:08:29 PDT
Comment on
attachment 41201
[details]
Round 1 Clearing flags on attachment: 41201 Committed
r49787
: <
http://trac.webkit.org/changeset/49787
>
WebKit Commit Bot
Comment 8
2009-10-19 09:08:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug