2009-10-19  Andrew Scherkus  <scherkus@chromium.org>

Reviewed by Eric Seidel.

        Use fillRect() instead of drawRect() to fix Chromium media controls rendering.

        https://bugs.webkit.org/show_bug.cgi?id=30371

        Chromium Mac layout tests will need to be rebaselined.  Existing layout tests for Linux/Win still pass.

        * rendering/RenderMediaControlsChromium.cpp:
        (WebCore::paintMediaSlider): Use fillRect() instead of drawRect().

Canonical link: https://commits.webkit.org/41241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49787 268f45cc-cd09-0410-ab3c-d52691b4dbfc